# ChangeLog for sys-fs/sshfs-fuse
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/sshfs-fuse/ChangeLog,v 1.43 2008/09/24 07:06:06 genstef Exp $

  20 Sep 2008; Stefan Schweizer <genstef@gentoo.org>
  -files/sshfs-fuse-2.6.0_pre3.patch, -sshfs-fuse-1.6.ebuild,
  -sshfs-fuse-1.7.ebuild, -sshfs-fuse-1.8.ebuild, +sshfs-fuse-2.1.ebuild:
  remove old

*sshfs-fuse-2.1 (20 Sep 2008)

  20 Sep 2008; Stefan Schweizer <genstef@gentoo.org> +sshfs-fuse-2.1.ebuild:
  version bump

  16 Mar 2008; Ferris McCormick <fmccor@gentoo.org> sshfs-fuse-1.9.ebuild:
  Sparc stable --- Bug #211018 --- thanks to Friedrich Oslage for testing.

  15 Mar 2008; nixnut <nixnut@gentoo.org> sshfs-fuse-1.9.ebuild:
  Stable on ppc wrt bug 211018

  13 Mar 2008; Markus Rothe <corsair@gentoo.org> sshfs-fuse-1.9.ebuild:
  Stable on ppc64; bug #211018

  12 Mar 2008; Santiago M. Mola <coldwind@gentoo.org> sshfs-fuse-1.9.ebuild:
  amd64 stable wrt bug #211018

  12 Mar 2008; Christian Faulhammer <opfer@gentoo.org>
  sshfs-fuse-1.9.ebuild:
  stable x86, bug 211018

*sshfs-fuse-1.9 (17 Dec 2007)

  17 Dec 2007; Stefan Schweizer <genstef@gentoo.org> +sshfs-fuse-1.9.ebuild:
  version bump

  15 Oct 2007; Markus Rothe <corsair@gentoo.org> sshfs-fuse-1.8.ebuild:
  Stable on ppc64

  13 Oct 2007; Markus Rothe <corsair@gentoo.org> sshfs-fuse-1.7.ebuild:
  Stable on ppc64; bug #193331

  06 Oct 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  sshfs-fuse-1.8.ebuild:
  Going back to ~ppc as per bug #192229

  22 Sep 2007; Christian Faulhammer <opfer@gentoo.org>
  sshfs-fuse-1.7.ebuild:
  stable x86, bug 193331

  13 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  sshfs-fuse-1.8.ebuild:
  ppc. stable

  15 Jun 2007; Gustavo Zacarias <gustavoz@gentoo.org> sshfs-fuse-1.8.ebuild:
  Stable on sparc

  13 Jun 2007; Christoph Mende <angelos@gentoo.org> sshfs-fuse-1.8.ebuild:
  Stable on amd64 wrt bug 181416
