@@ -1,6 +1,8 @@
 DIST sshfs-fuse-1.9.tar.gz 109206 RMD160 9a495f16cdd60b0eeccf8f20626f6370714c6848 SHA1 dfd3a72c76f6b4fac4105b23ca228d8166a0510a SHA256 ea374874ded639a037e2ea68c94d43df4076b111f799d15850a6f1069f863a82
 DIST sshfs-fuse-2.1.tar.gz 115228 RMD160 507ada336b883938a8d933502318770ad93d32e5 SHA1 c4e38fa8d4cec89af09cccae08a9f1bd96f452d4 SHA256 1234fae4686f41b343e9785b4de16dae4049ab1b4d8ba28e8479eccc1bc2d233
+DIST sshfs-fuse-2.2.tar.gz 115709 RMD160 65aeb030e492b5d9a7c16558d62792eb0d3ac3a6 SHA1 5c75cc747f97fd4fa031059346c25282027e5bc9 SHA256 206ebcbc4cb9f5039bfcc7059678a0f61120605a5cdcbffa3ae5716c113e5423
 EBUILD sshfs-fuse-1.9.ebuild 842 RMD160 36b06b737b7fe1d6cb737643ccd8da2b48b0b12d SHA1 e9744fa65ed7a3dc2b7d3b2bc6a4b91547710f20 SHA256 a944ff273d780b99d78c699e1cb1ad3137a386dda36d3d91a3c436bfd3843d53
 EBUILD sshfs-fuse-2.1.ebuild 848 RMD160 a4db6400248d98ac3e031cab9fcf9a079331a2ac SHA1 2729d9a5c77332ff3b8c0430b0b24b90156797fa SHA256 45a434d0218bc8f5159f763e93042b2367fade7097184d393864956dc4e94fba
-MISC ChangeLog 5786 RMD160 a08cbd577c6ebcc9959588b1965b5660cbb5f4be SHA1 3e18b4e419cc68f2a64dc290ff1462a289c08be1 SHA256 d2512b453cc1269f2f809a898ce848295ebd570827da370cbfbb48b2ed133c36
+EBUILD sshfs-fuse-2.2.ebuild 844 RMD160 2b192c85d886657f6192a0c7fc732f273700063e SHA1 df2a073108da0e31f9af5748a8d5467c93b844c0 SHA256 42b07309b2a6498e5999c509b73aace66df7698e388606b0e553c6423e8f3d99
+MISC ChangeLog 5971 RMD160 bf16156809b960becddd0cf740041f0cf0bb0302 SHA1 361e22d7356fb35d5aba943983ae99e6ab35f8cf SHA256 c2b134f00ac02cac1f0fba387969411bd8558b6888a71f69539a9cb4ebce27da
 MISC metadata.xml 269 RMD160 f435568d5cae240406c8def9cbb4b2195567f011 SHA1 87192fbb5e58ab4854c26ea5fcfe535700f462be SHA256 9459df81d59d1dac43f3f8061590e1618e6f256b409a772bb07e660dac3bc5f6
