@@ -1,6 +1,12 @@
 # ChangeLog for sys-fs/sshfs-fuse
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/sshfs-fuse/ChangeLog,v 1.43 2008/09/24 07:06:06 genstef Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/sshfs-fuse/ChangeLog,v 1.44 2009/07/06 19:14:18 pva Exp $
+
+*sshfs-fuse-2.2 (06 Jul 2009)
+
+  06 Jul 2009; Peter Volkov <pva@gentoo.org> +sshfs-fuse-2.2.ebuild:
+  Version bump. Fixed man page installation, bug #258815, thank Jack Hill
+  for report.
 
   20 Sep 2008; Stefan Schweizer <genstef@gentoo.org>
   -files/sshfs-fuse-2.6.0_pre3.patch, -sshfs-fuse-1.6.ebuild,
